# barsqan

./: README.md  config.example.yaml  environment.yml  pyproject.toml  requirements.txt
BC-sqan/: __init__.py  extract.py  fastq_io.py  map_overlap.py  motif.py
BC_sqan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
barsqan/: __init__.py  cli.py  cluster_umi.py  config.py  distance.py  map_overlap.py
bcsqan/: cli.py  cluster_umi.py  filter_reads.py
conda-recipe/: meta.yaml
example_data/: index_map.csv  make_test_data.py  samples.txt
tests/: test_pipeline.py
