[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barsqan"
version = "0.1.0"
description = "Extract, filter, cluster, and cross-sample map amplicon barcodes from FASTQ files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "regex>=2023.0",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# `pip install .[plot]` to enable the `map --plot` distribution plots.
plot = ["matplotlib>=3.5"]

[project.scripts]
barsqan = "barsqan.cli:main"

[tool.setuptools]
packages = ["barsqan"]
